--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Henock Yared <demessiehe@yahoo.com>
+Wastna Bejigu <wasealex27@gmail.com>
