--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Henock Yared <demessiehe@yahoo.com>
-Wastna Bejigu <wasealex27@gmail.com>
+Wastna Bejiga <wasealex27@gmail.com>
